# projeto-discografia

./: README.md  database.py  main.py  models.py  pyproject.toml  seed.py
static/: style.css
templates/: base.html  detalhe.html  form.html  lista.html
