[project]
name = "minha-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "taskipy>=1.14.1",
]

# pyproject.toml
[tool.taskipy.tasks]
run = 'fastapi dev main.py'
lint = 'ruff check .'
format = 'ruff format .'

